--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- header_section_start -->
 
     <section class="header_section">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand " href="#"><span class="yz_span_img d-inline-block"><img src="./assets/css/img/IMG-20240120-WA0003-removebg-preview.png" alt="" srcset="" class="h-100"></span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -45,6 +45,16 @@
         </div>
       </nav>
 
+    </section>
+
+    <section class="carusel-section">
+
+      <div class="pic-ctn">
+        <img src="./assets/css/img/WhatsApp Image 2024-01-23 at 1.36.26 AM.jpeg" alt="" class="pic h-100">
+        <img src="./assets/css/img/WhatsApp Image 2024-01-23 at 1.36.26 AM (1).jpeg" alt="" class="pic h-100">
+        <img src="./assets/css/img/WhatsApp Image 2024-01-23 at 1.36.27 AM.jpeg" alt="" class="pic h-100">
+        <img src="./assets/css/img/WhatsApp Image 2024-01-23 at 1.37.01 AM.jpeg" alt="" class="pic h-100">
+      </div>
     </section>
 
 
