--- a/index.html
+++ b/index.html
@@ -24,23 +24,35 @@
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Me</a>
+              <a class="nav-link" href="#">Catalog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Shirts</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">T-Shirts</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Track Pants</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Joggers</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="gallary.html">Gallery</a>
+              <a class="nav-link" href="#">About Me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Content</a>
             </li>
           </ul>
           <div class="con-icon">
-            <a href="https://instagram.com/sk_capture0515?igshid=MzNlNGNkZWQ4Mg=="class="con-ion-aref"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/yaz._.fashion.town?igsh=bmh3dnBzNnAzaHhy"class="con-ion-aref"><i class="fa-brands fa-instagram"></i></a>
             <a href="#"class="con-ion-aref"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"class="con-ion-aref"><i class="fa-regular fa-envelope"></i></a>
-            <a href="#"class="con-ion-aref"><i class="fa-brands fa-telegram"></i></a>
+            <a href="#"class="con-ion-aref"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://t.me/+YU6Ymfr_LOBiZGM1"class="con-ion-aref"><i class="fa-brands fa-telegram"></i></a>
           </div>
         </div>
       </nav>
@@ -56,7 +68,10 @@
         <img src="./assets/css/img/WhatsApp Image 2024-01-23 at 1.37.01 AM.jpeg" alt="" class="pic h-100">
       </div>
     </section>
+ <section class="ad ">
 
+  <video  class="h-100" src="./assets/css/img/VID-20240118-WA0000.mp4" autoplay loop muted></video>
+ </section>
 
 
 
