--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- header_section_start -->
 
     <section class="header_section">
-      <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand " href="#"><span class="yz_span_img d-inline-block"><img src="./assets/css/img/IMG-20240120-WA0003-removebg-preview.png" alt="" srcset="" class="h-100"></span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -62,15 +62,33 @@
     <section class="carusel-section">
 
       <div class="pic-ctn">
-        <img src="./assets/css/img/WhatsApp Image 2024-01-23 at 1.36.26 AM.jpeg" alt="" class="pic h-100">
-        <img src="./assets/css/img/WhatsApp Image 2024-01-23 at 1.36.26 AM (1).jpeg" alt="" class="pic h-100">
-        <img src="./assets/css/img/WhatsApp Image 2024-01-23 at 1.36.27 AM.jpeg" alt="" class="pic h-100">
-        <img src="./assets/css/img/WhatsApp Image 2024-01-23 at 1.37.01 AM.jpeg" alt="" class="pic h-100">
-      </div>
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="./assets/css/img/WhatsApp Image 2024-01-23 at 1.36.26 AM.jpeg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./assets/css/img/WhatsApp Image 2024-01-23 at 1.36.26 AM (1).jpeg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./assets/css/img/WhatsApp Image 2024-01-23 at 1.36.27 AM.jpeg" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
     </section>
  <section class="ad ">
-
-  <video  class="h-100" src="./assets/css/img/VID-20240118-WA0000.mp4" autoplay loop muted></video>
+<div class="video-div">
+    
+  <!-- <video  class="h-100" src="./assets/css/img/VID-20240118-WA0000.mp4" autoplay loop muted></video> -->
+</div>
  </section>
 
 
